Correct size and position of title in Story Show on mobile display.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -197,7 +197,7 @@ $main-page-date-desktop: $main-page-title-desktop*0.2;
 $main-page-date-mobile: $main-page-title-mobile*0.2;
 
 $story-show-title-desktop: 85px;
-$story-show-title-mobile: 55px;
+$story-show-title-mobile: 45px;
 
 $story-show-section-title-desktop: 60px;
 $story-show-section-title-mobile: 45px;
