--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -296,6 +296,8 @@
   .story-show-header-title{
     bottom: 180px;
     font-size: $story-show-title-mobile;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .story-show-header-button {
